# latpoly

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/latpoly-debug/: SKILL.md
.claude/skills/latpoly-deploy/: SKILL.md
.claude/skills/latpoly-strategy/: SKILL.md
.claude/skills/latpoly-trading/: SKILL.md
docs/: CLAUDE_SKILLS.md
schemas/: normalized_tick.schema.json
src/latpoly/: config.py  health.py  loop_setup.py  main.py  shared_state.py
src/latpoly/analysis/: calibrate_rate.py  enrich.py  lag_report.py  quantilab.py  roi.py
src/latpoly/execution/: poly_client.py
src/latpoly/strategy/: __init__.py  backtest.py  base.py  config.py  engine.py  mm_quote_engine.py  optimize.py  registry.py  strategy_2.py  strategy_3.py  strategy_4.py  strategy_5.py
src/latpoly/utils/: discovery.py  ws_base.py
src/latpoly/workers/: binance_ws.py  live_trader.py  mm_trader.py  paper_trader.py  polymarket_ws.py  signal.py  writer.py
