[project]
name = "latpoly"
version = "0.1.0"
description = "Low-latency BTC observation: Binance spot vs Polymarket 15m prediction markets"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "orjson>=3.10",
    "aiohttp>=3.9",
    "py-clob-client>=0.18.0",
]

[project.optional-dependencies]
linux = ["uvloop>=0.20"]

[project.scripts]
latpoly = "latpoly.main:entry"
